2009-06-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y,
	* src/SDCCsymt.c (finalizeSpec),
	* src/SDCCsymt.h: applied patch for bug 2798646, thanks Robert Larice
	* src/SDCCsymt.c (initCSupport): also handle --funsigned-char for floating
	  point support routines
	* src/z80/ralloc.c (regTypeNum): fixed warning
	* device/lib/_atof.c,
	* support/regression/tests/args.c,
	* support/regression/tests/arithcse.c,
	* support/regression/tests/bitvars.c,
	* support/regression/tests/compare.c,
	* support/regression/tests/onebyte.c,
	* support/regression/tests/shifts.c,
	* support/regression/tests/uminus.c,
	* support/regression/tests/vaargs.c: fixed for --funsigned-char

2009-05-30 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/80c51xa.h: moved to device/include/xa51
	  device/include/mcs51/ds400rom.h: moved to device/include/ds400
	  device/include/mcs51/serial390.h: moved to device/include/ds390
	  device/include/mcs51/ds80c390.h, device/include/mcs51/tinibios.h:
	  moved back to device/include, since they are used also by ds400
	  device/include/Makefile.in: new include directories ds390, ds400
	  and xa51
	* device/include/stdlib.h: coorected types for _itoa and _ltoa
	* device/lib/ds400/Makefile.in: added include serch path include/ds400

2009-05-25 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c:
	  Fixed an ancient, but difficult to reproduce and detect bug, that
	  led to stack corruption under certain conditions.

2009-05-25 Borut Razem <borut.razem AT siol.net>

	* device/include/80c51xa.h, device/include/ds400rom.h,
	  device/include/ds80c390.h, device/include/ser.h,
	  device/include/ser_ir.h, device/include/serial.h,
	  device/include/serial390.h, device/include/tinibios.h:
	  moved to device/include/mcs51/
	  device/include/z180.h:
	  moved to device/include/z80/
	  implemented RFE #1930974: Some device specific header files are not
	  in their folders

2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,